--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,8 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <h1>weather</h1>
+    <header class="py-8 w-full bg-gray-900 m-auto text-center">
+        <h1 class=" text-white text-3xl">Weather in <span id="city">Nairobi</span></h1>
+    </header>
 </body>
 </html>
