--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;400;500;700&display=swap');
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 /*
 ! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
 */
@@ -519,8 +553,20 @@ video {
   margin: auto;
 }
 
+.mt-8{
+  margin-top: 2rem;
+}
+
+.w-3\/5{
+  width: 60%;
+}
+
 .w-full{
   width: 100%;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .bg-gray-900{
@@ -528,9 +574,8 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
+.p-4{
+  padding: 1rem;
 }
 
 .py-8{
@@ -550,4 +595,15 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.bg-overlay{
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+body{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
