--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,5 +10,12 @@
     <header class="py-8 w-full bg-gray-900 m-auto text-center">
         <h1 class=" text-white text-3xl">Weather in <span id="city">Nairobi</span></h1>
     </header>
+    <main class="mt-8">
+        <section>
+            <div class="container text-center m-auto bg-overlay p-4 w-3/5 rounded-md">
+                <h1 class=" text-white text-3xl" id="general-condition">General weather Condition</span></h1>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
