feat: Fetch weather data from Weather api

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,10 +10,20 @@
     <header class="py-8 w-full bg-gray-900 m-auto text-center">
         <h1 class=" text-white text-3xl">Weather in <span id="city">Nairobi</span></h1>
     </header>
-    <main class="mt-8">
+    <main class="mt-8 space-y-8">
         <section>
             <div class="container text-center m-auto bg-overlay p-4 w-3/5 rounded-md">
                 <h1 class=" text-white text-3xl" id="general-condition">General weather Condition</span></h1>
+            </div>
+        </section>
+        <section>
+            <div class="conatiner m-auto text-center bg-overlay-2 rounded-md">
+                <div class="grid grid-cols-2">
+                    <div class="flex flex-row items-strect justify-start">
+                        <img src="" alt="" id="weather-icon" class="rounded-sm w-full">
+                        <h1 class="text-5xl text-orange-600 font-medium">21<span>&#8451</span></h1>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
