--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -553,6 +553,11 @@ video {
   margin: auto;
 }
 
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mt-8{
   margin-top: 2rem;
 }
@@ -561,8 +566,8 @@ video {
   display: flex;
 }
 
-.grid{
-  display: grid;
+.w-2\/5{
+  width: 40%;
 }
 
 .w-3\/5{
@@ -573,16 +578,42 @@ video {
   width: 100%;
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .flex-row{
   flex-direction: row;
 }
 
-.justify-start{
-  justify-content: flex-start;
+.flex-col{
+  flex-direction: column;
+}
+
+.items-start{
+  align-items: flex-start;
+}
+
+.items-center{
+  align-items: center;
+}
+
+.items-stretch{
+  align-items: stretch;
+}
+
+.justify-end{
+  justify-content: flex-end;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .space-y-8 > :not([hidden]) ~ :not([hidden]){
@@ -595,10 +626,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded{
-  border-radius: 0.25rem;
-}
-
 .rounded-sm{
   border-radius: 0.125rem;
 }
@@ -608,8 +635,38 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
+.bg-orange-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(124 45 18 / var(--tw-bg-opacity));
+}
+
+.bg-slate-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
 .p-4{
   padding: 1rem;
+}
+
+.px-16{
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-8{
@@ -619,6 +676,10 @@ video {
 
 .text-center{
   text-align: center;
+}
+
+.text-start{
+  text-align: start;
 }
 
 .text-3xl{
@@ -631,13 +692,13 @@ video {
   line-height: 1;
 }
 
-.font-medium{
-  font-weight: 500;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+.font-medium{
+  font-weight: 500;
 }
 
 .text-orange-600{
@@ -645,8 +706,31 @@ video {
   color: rgb(234 88 12 / var(--tw-text-opacity));
 }
 
+.text-slate-300{
+  --tw-text-opacity: 1;
+  color: rgb(203 213 225 / var(--tw-text-opacity));
+}
+
+.text-slate-800{
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .bg-overlay{
   background-color: rgba(0, 0, 0, 0.8);
+}
+
+.bg-overlay-2{
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.bg-overlay-3{
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 body{
@@ -654,4 +738,12 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+}
+
+#line{
+  width: 2px;
+}
+
+#weather-icon{
+  height: 100px;
 }
