chore: Customize page title and page heading to current city name

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="py-8 w-full bg-gray-900 m-auto text-center">
-        <h1 class=" text-white text-3xl">Weather in <span id="city">Nairobi</span></h1>
+        <h1 class=" text-white text-3xl">Weather in <span id="city-name"></span></h1>
     </header>
     <main class="mt-8 space-y-8 px-16">
         <section>
