--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -549,10 +549,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed{
-  position: fixed;
-}
-
 .relative{
   position: relative;
 }
@@ -584,14 +580,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-3{
-  width: 0.75rem;
-}
-
-.w-1\/5{
-  width: 20%;
 }
 
 .flex-row{
@@ -682,25 +670,8 @@ video {
   background-color: transparent;
 }
 
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-none{
-  background-image: none;
-}
-
 .p-4{
   padding: 1rem;
-}
-
-.p-2{
-  padding: 0.5rem;
-}
-
-.p-8{
-  padding: 2rem;
 }
 
 .px-16{
@@ -713,9 +684,19 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-4{
@@ -726,16 +707,6 @@ video {
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .text-center{
@@ -807,7 +778,6 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
 }
 
 #line{
@@ -829,6 +799,10 @@ body{
 }
 
 @media (min-width: 1024px){
+  .lg\:w-2\/5{
+    width: 40%;
+  }
+
   .lg\:flex-row{
     flex-direction: row;
   }
