chore: Make page responsive

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,13 +24,13 @@
         </section>
         <section>
             <div class="container m-auto text-center px-8 bg-overlay-2 rounded-md py-4">
-                <div class="flex flex-row items-stretch justify-center">
-                    <div class="flex flex-row items-center justify-end px-8 w-2/5">
+                <div class="flex flex-col items-center lg:items-stretch md:items-stretch justify-center lg:flex-row md:flex-row">
+                    <div class="flex flex-col items-center justify-end px-8 w-2/5 lg:flex-row">
                         <img src="" alt="" id="weather-icon" class="rounded-sm">
                         <h1 class="text-5xl text-orange-600 font-medium" id="temp-c"><span class="px-2"></span>&#8451;</h1>
                     </div>
                     <div class="bg-slate-500" id="line"></div>
-                    <div class="px-8 py-4 w-2/5 flex flex-col items-start space-y-4">
+                    <div class="px-8 py-4 md:w-2/5 lg:w-2/5 flex flex-col items-start space-y-4">
                         <h1 class="text-xl text-slate-800 font-medium" id="temp-f">Fahrenheit :<span class="px-2 mx-2 text-white bg-orange-900"></span>&#8457;</h1>
                         <h1 class="text-xl text-slate-800 font-medium" id="humidity">Humidity :<span class="px-2 mx-2 text-white bg-orange-900"></span>g/&#13221;</h1>
                         <h1 class="text-xl text-slate-800 font-medium" id="pressure">Pressure :<span class="px-2 mx-2 text-white bg-orange-900"></span>mbar</h1>
