--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -570,6 +570,10 @@ video {
   display: flex;
 }
 
+.hidden{
+  display: none;
+}
+
 .w-2\/5{
   width: 40%;
 }
@@ -798,6 +802,20 @@ body{
   outline-offset: 2px;
 }
 
+@media (min-width: 768px){
+  .md\:w-2\/5{
+    width: 40%;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:items-stretch{
+    align-items: stretch;
+  }
+}
+
 @media (min-width: 1024px){
   .lg\:w-2\/5{
     width: 40%;
@@ -805,5 +823,13 @@ body{
 
   .lg\:flex-row{
     flex-direction: row;
+  }
+
+  .lg\:items-stretch{
+    align-items: stretch;
+  }
+
+  .lg\:justify-center{
+    justify-content: center;
   }
 }
