chore: Update footer text

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -54,5 +54,8 @@
             </div>
         </section>
     </main>
+    <footer class="bg-overlay py-4 text-center">
+        <p class="text-slate-300 text-sm">Copyright &copy; </p>
+    </footer>
 </body>
 </html>
