chore: Encapsulate all display methods in Displayer Class

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -562,6 +562,11 @@ video {
   margin-right: 0.5rem;
 }
 
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .mt-8{
   margin-top: 2rem;
 }
@@ -836,5 +841,11 @@ body{
 
   .lg\:justify-center{
     justify-content: center;
+  }
+
+  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 }
