--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,7 @@
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
-        <header class="py-8 px-16 space-y-4 w-full bg-gray-900 m-auto text-center relative flex flex-col justify-between items-center lg:flex-row">
+        <header class="py-4 px-16 space-y-4 w-full bg-gray-900 m-auto text-center relative flex flex-col justify-between items-center lg:space-y-0 lg:flex-row">
             <h1 class=" text-white text-3xl">Weather in <span id="city-name"></span></h1>
             <!-- Form search -->
             <form action="" method="get" class="w-full flex flex-row gap-8 items-end lg:w-2/5">
@@ -16,7 +16,7 @@
             
             </form>
     </header>
-    <main class="mt-8 space-y-8 px-16">
+    <main class="my-8 space-y-8 px-16">
         <section>
             <div class="container text-center m-auto bg-overlay p-4 w-3/5 rounded-md">
                 <h1 class=" text-white text-3xl" id="general-condition">General weather Condition</span></h1>
